mainly temp analysis data supporting command generation

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,10 +1,10 @@
 # Exclude grpc generated files
-exclude: ^ansys/api/systemcoupling/v0/
+exclude: ^(ansys/api/systemcoupling/v0/|scripts/temp_data/)
 
 # initially copied from pymapdl
 repos:
 - repo: https://github.com/psf/black
-  rev: 22.1.0
+  rev: 22.3.0
   hooks:
   - id: black
 
