--- a/requirements_docs.txt
+++ b/requirements_docs.txt
@@ -1,4 +1,26 @@
-Sphinx
-https://github.com/numpy/numpydoc/archive/main.zip  # need latest
-pyansys_sphinx_theme>=0.2.0
-sphinx-copybutton
+#Sphinx
+#https://github.com/numpy/numpydoc/archive/main.zip  # need latest
+#pyansys_sphinx_theme>=0.2.0
+#sphinx-copybutton
+
+# This requirements list might need tweaking. It was derived
+# by comparing those from mapdl and fluent and excluding those
+# that appeared to be specific to one or other product. Also
+# excluded some like plotly, matplotlib, pandas and vtx, that
+# do not seem relevant to SyC at this point.
+# Where there was a version mismatch between mapdl and fluent,
+# the higher version has been taken.
+
+Sphinx==4.5.0
+jupyter_sphinx==0.3.2
+numpydoc==1.3.1
+pyansys_sphinx_theme==0.3.1
+pypandoc==1.8.1
+pytest-sphinx==0.4.0
+sphinx-autobuild==2021.3.14
+sphinx-autodoc-typehints==1.18.1
+sphinx-copybutton==0.5.0
+sphinx-gallery==0.10.1
+sphinx-notfound-page==0.8
+sphinxcontrib-websupport==1.2.4
+sphinxemoji==0.2.0
