--- a/requirements_classesgen.txt
+++ b/requirements_classesgen.txt
@@ -1,4 +1,4 @@
-# Requirements for running the "datamodel generation" script.
+# Requirements for running the "generate_datamodel" script.
 # The script runs System Coupling via the pySystemCoupling
 # API and assumes that it will be run directly from the package
 # source tree. The dependencies are therefore essentially the same
@@ -10,7 +10,4 @@ grpcio>=1.30.0
 grpcio-status>=1.30.0
 protobuf>=3.12.2,<4.0.0
 psutil>=5.7.0
-
-
-
-
+black==22.3.0 # keep this consistent with pre-commit config
