--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -58,6 +58,21 @@ jobs:
       - name: Install library
         run: pip install dist/*
 
+      - name: Login to GitHub Container Registry
+        #if: steps.cache-api-code.outputs.cache-hit != 'true'
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ secrets.GH_USERNAME }}
+          password: ${{ secrets.REPO_DOWNLOAD_PAT }}
+
+      - name: Pull docker image
+        #if: steps.cache-api-code.outputs.cache-hit != 'true'
+        run: make docker-pull
+        env:
+          SYC_IMAGE_TAG: latest
+
+
       - name: Unit testing
         run: |
           pip install -r requirements_test.txt
