--- a/doc/Makefile
+++ b/doc/Makefile
@@ -16,6 +16,7 @@ help:
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
 %: Makefile
+  @echo "SPHINXOPTS=>>" $(SPHINXOPTS) "<<" 
 	@python datamodel_rstgen.py
 	@$(SPHINXBUILD) -M $@ "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
 
