--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -103,13 +103,13 @@ jobs:
         run: |
           pip install -r requirements_docs.txt
           make -C doc clean
-          make -C doc html SPHINXOPTS="-W"
+          make -C doc html SPHINXERRWARN="-W"
 
-      # - name: Build PDF Documentation
-      #   run: |
-      #     sudo apt update
-      #     sudo apt-get install -y texlive-latex-extra latexmk
-      #     make -C doc latexpdf
+      - name: Build PDF Documentation
+        run: |
+          sudo apt update
+          sudo apt-get install -y texlive-latex-extra latexmk
+          make -C doc latexpdf SPHINXERRWARN=""
 
       - name: Upload HTML Documentation
         uses: actions/upload-artifact@v2
@@ -118,12 +118,12 @@ jobs:
           path: doc/build/html
           retention-days: 7
 
-      # - name: Upload PDF Documentation
-      #   uses: actions/upload-artifact@v2
-      #   with:
-      #     name: Documentation-pdf
-      #     path: doc/build/latex/*.pdf
-      #     retention-days: 7
+      - name: Upload PDF Documentation
+        uses: actions/upload-artifact@v2
+        with:
+          name: Documentation-pdf
+          path: doc/build/latex/*.pdf
+          retention-days: 7
 
   Release:
     if: contains(github.ref, 'refs/tags')
