fix doc build path for upload

--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -115,14 +115,14 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: Documentation-html
-          path: doc/build/html
+          path: doc/_build/html
           retention-days: 7
 
       - name: Upload PDF Documentation
         uses: actions/upload-artifact@v2
         with:
           name: Documentation-pdf
-          path: doc/build/latex/*.pdf
+          path: doc/_build/latex/*.pdf
           retention-days: 7
 
   Release:
