--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -72,7 +72,6 @@ jobs:
         env:
           SYC_IMAGE_TAG: latest
 
-
       - name: Unit testing
         run: |
           pip install -r requirements_test.txt
@@ -103,26 +102,27 @@ jobs:
       - name: Build HTML
         run: |
           pip install -r requirements_docs.txt
-          make -C doc html SPHINXOPTS="-W"
+          make -C doc clean
+          make -C doc html SPHINXERRWARN="-W"
 
       - name: Build PDF Documentation
         run: |
           sudo apt update
           sudo apt-get install -y texlive-latex-extra latexmk
-          make -C doc latexpdf
+          make -C doc latexpdf SPHINXERRWARN=""
 
       - name: Upload HTML Documentation
         uses: actions/upload-artifact@v2
         with:
           name: Documentation-html
-          path: doc/build/html
+          path: doc/_build/html
           retention-days: 7
 
       - name: Upload PDF Documentation
         uses: actions/upload-artifact@v2
         with:
           name: Documentation-pdf
-          path: doc/build/latex/*.pdf
+          path: doc/_build/latex/*.pdf
           retention-days: 7
 
   Release:
