--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -64,7 +64,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ secrets.GH_USERNAME }}
-          password: ${{ secrets.REPO_DOWNLOAD_PAT }}
+          password: ${{ secrets.GH_TOKEN }}
 
       - name: Pull docker image
         #if: steps.cache-api-code.outputs.cache-hit != 'true'
