--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -60,11 +60,11 @@ jobs:
 
       - name: Login to GitHub Container Registry
         #if: steps.cache-api-code.outputs.cache-hit != 'true'
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ secrets.GH_USERNAME }}
-          password: ${{ secrets.REPO_DOWNLOAD_PAT }}
+          password: ${{ secrets.GH_TOKEN }}
 
       - name: Pull docker image
         #if: steps.cache-api-code.outputs.cache-hit != 'true'
