--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,5 @@
-# Exclude grpc generated files
-exclude: ^(ansys/api/systemcoupling/v0/|scripts/temp_data/|examples/)
+# Exclude grpc generated files etc.
+exclude: ^(ansys/api/systemcoupling/v0/|examples/)
 
 # initially copied from pymapdl
 repos:
