WIP - oscillating plate as Sphinx Gallery example

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,5 @@
 # Exclude grpc generated files etc.
-exclude: ^(src/ansys/api/systemcoupling/v0/|examples/)
+exclude: ^(src/ansys/api/systemcoupling/v0/|examples/|doc/)
 
 # initially copied from pymapdl
 repos:
