--- a/requirements/requirements_docs.txt
+++ b/requirements/requirements_docs.txt
@@ -15,6 +15,7 @@ Sphinx==5.2.3
 jupyter_sphinx==0.4.0
 ansys-sphinx-theme==0.6.1
 numpydoc==1.5.0
+matplotlib
 pypandoc==1.9
 pytest-sphinx==0.5.0
 sphinx-autobuild==2021.3.14
