--- a/requirements/requirements_docs.txt
+++ b/requirements/requirements_docs.txt
@@ -6,10 +6,10 @@
 # This requirements list might need tweaking. It was derived
 # by comparing those from mapdl and fluent and excluding those
 # that appeared to be specific to one or other product. Also
-# excluded some like plotly, matplotlib, pandas and vtx, that
+# excluded some like plotly, pandas and vtx, that
 # do not seem relevant to SyC at this point.
 # Where there was a version mismatch between mapdl and fluent,
-# the higher version has been taken.
+# the higher version has been taken unless it caused a conflict.
 
 Sphinx==5.2.3
 jupyter_sphinx==0.4.0
@@ -25,3 +25,7 @@ sphinx-gallery==0.11.1
 sphinx-notfound-page==0.8.3
 sphinxcontrib-websupport==1.2.4
 sphinxemoji==0.2.0
+
+# pyansys dependencies for sphinx gallery examples
+#ansys-fluent-core # install manually from github until protobuf version fixed
+ansys-dpf-core
