--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -58,6 +58,10 @@ jobs:
       - name: Install library
         run: pip install dist/*
 
+      - name: Install gRPC API from private PyPi (temp)
+        run: |
+          pip install ansys-api-systemcoupling -i https://PAT:${{ secrets.PYANSYS_PYPI_PRIVATE_PAT_RO }}@pkgs.dev.azure.com/pyansys/_packaging/pyansys/pypi/simple/
+
       - name: Login to GitHub Container Registry
         #if: steps.cache-api-code.outputs.cache-hit != 'true'
         uses: docker/login-action@v2
@@ -112,6 +116,10 @@ jobs:
 
       - name: Install library
         run: pip install .
+
+      - name: Install gRPC API from private PyPi (temp)
+        run: |
+          pip install ansys-api-systemcoupling -i https://PAT:${{ secrets.PYANSYS_PYPI_PRIVATE_PAT_RO }}@pkgs.dev.azure.com/pyansys/_packaging/pyansys/pypi/simple/
 
       - name: Build HTML
         run: |
