--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -114,12 +114,35 @@ jobs:
         with:
           python-version: 3.8
 
-      - name: Install library
-        run: pip install .
+      - name: Create initial wheel and install
+        run: make build-install
 
       - name: Install gRPC API from private PyPI (temp)
         run: |
           pip install ansys-api-systemcoupling -i https://PAT:${{ secrets.PYANSYS_PYPI_PRIVATE_PAT_RO }}@pkgs.dev.azure.com/pyansys/_packaging/pyansys/pypi/simple/
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ secrets.GH_USERNAME }}
+          password: ${{ secrets.GH_TOKEN }}
+
+      - name: Pull docker image
+        run: make docker-pull
+        env:
+          SYC_IMAGE_TAG: v23.1.0
+
+      - name: Generate API code
+        run: make generate-api
+        env:
+          SYC_LAUNCH_CONTAINER: 1
+          SYC_IMAGE_TAG: v23.1.0
+
+      - name: Rebuild/reinstall wheel containing generated API
+        run: |
+          rm -rf dist
+          make build-install
 
       - name: Build HTML
         run: |
