--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
         run: |
           make flake8
 
-  main:
+  build_test:
     name: Build and Testing
     runs-on: ubuntu-latest
 
@@ -45,25 +45,14 @@ jobs:
         with:
           python-version: 3.8
 
-      - name: Create wheel
-        run: |
-          pip install wheel
-          python setup.py bdist_wheel
-
-      - name: Validate wheel
-        run: |
-          pip install twine
-          twine check dist/*
-
-      - name: Install library
-        run: pip install dist/*
+      - name: Create initial wheel and install
+        run: make build-install
 
       - name: Install gRPC API from private PyPI (temp)
         run: |
           pip install ansys-api-systemcoupling -i https://PAT:${{ secrets.PYANSYS_PYPI_PRIVATE_PAT_RO }}@pkgs.dev.azure.com/pyansys/_packaging/pyansys/pypi/simple/
 
       - name: Login to GitHub Container Registry
-        #if: steps.cache-api-code.outputs.cache-hit != 'true'
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
@@ -71,19 +60,25 @@ jobs:
           password: ${{ secrets.GH_TOKEN }}
 
       - name: Pull docker image
-        #if: steps.cache-api-code.outputs.cache-hit != 'true'
         run: make docker-pull
         env:
-          SYC_IMAGE_TAG: latest
+          SYC_IMAGE_TAG: v23.1.0
 
-      # - name: Unit testing
-      #   run: |
-      #     pip install -r requirements/requirements_test.txt
-      #     cd tests  # so we're testing the install, not local
-      #     pytest -vx
+      - name: Generate API code
+        run: make generate-api
+        env:
+          SYC_LAUNCH_CONTAINER: 1
+          SYC_IMAGE_TAG: v23.1.0
+
+      - name: Rebuild/reinstall wheel containing generated API
+        run: |
+          rm -rf dist
+          make build-install
 
       - name: Unit testing
         run: make unittest
+        env:
+          SYC_IMAGE_TAG: v23.1.0
 
       # Codecov not available until we are public
       #- name: Upload coverage to Codecov
@@ -95,6 +90,11 @@ jobs:
           name: HTML-coverage-syc
           path: cov_html
           retention-days: 7
+
+      - name: Check wheel
+        run: |
+          pip install twine
+          twine check dist/*
 
       - name: Upload wheel
         uses: actions/upload-artifact@v3
@@ -114,12 +114,35 @@ jobs:
         with:
           python-version: 3.8
 
-      - name: Install library
-        run: pip install .
+      - name: Create initial wheel and install
+        run: make build-install
 
       - name: Install gRPC API from private PyPI (temp)
         run: |
           pip install ansys-api-systemcoupling -i https://PAT:${{ secrets.PYANSYS_PYPI_PRIVATE_PAT_RO }}@pkgs.dev.azure.com/pyansys/_packaging/pyansys/pypi/simple/
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ secrets.GH_USERNAME }}
+          password: ${{ secrets.GH_TOKEN }}
+
+      - name: Pull docker image
+        run: make docker-pull
+        env:
+          SYC_IMAGE_TAG: v23.1.0
+
+      - name: Generate API code
+        run: make generate-api
+        env:
+          SYC_LAUNCH_CONTAINER: 1
+          SYC_IMAGE_TAG: v23.1.0
+
+      - name: Rebuild/reinstall wheel containing generated API
+        run: |
+          rm -rf dist
+          make build-install
 
       - name: Build HTML
         run: |
@@ -151,7 +174,7 @@ jobs:
 
   Release:
     if: contains(github.ref, 'refs/tags')
-    needs: [main, style, docs]
+    needs: [build_test, style, docs]
     runs-on: ubuntu-latest
     steps:
       - name: Set up Python
