--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -146,7 +146,7 @@ jobs:
 
       - name: Build HTML
         run: |
-          pip install -r requirements/requirements_docs.txt
+          pip install .[doc]
           make -C doc clean
           make -C doc html SPHINXERRWARN="-W"
         env:
