--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,7 +65,19 @@ doc = [
 	#"ansys-fluent-core", # install manually from github until protobuf version fixed
 	"ansys-dpf-core",
 ]
+style = [
+	"black==22.3.0",
+	"isort==5.10.1",
+]
+classesgen = [
+	# Dependencies for API class generation from System Coupling metadata
 
+	# black and isort are called programmatically to keep generated code
+	# consistent with style elsewhere. We need to keep the versions
+	# in sync with the [style] dependencies.
+	"black==22.3.0",
+	"isort==5.10.1",
+]
 [tool.flit.module]
 name = "ansys.systemcoupling.core"
 
