--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,15 +66,15 @@ doc = [
 	"ansys-dpf-core",
 ]
 style = [
-	"black==22.3.0",
-	"isort==5.10.1",
+	"codespell==2.1.0",
+	"flake8==3.9.2",
 ]
 classesgen = [
 	# Dependencies for API class generation from System Coupling metadata
 
 	# black and isort are called programmatically to keep generated code
 	# consistent with style elsewhere. We need to keep the versions
-	# in sync with the [style] dependencies.
+	# in sync with the precommit dependencies.
 	"black==22.3.0",
 	"isort==5.10.1",
 ]
