--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,10 +40,17 @@ classifiers = [
 ]
 
 [project.optional-dependencies]
-tests = [
-	"pytest",
-	"pytest-cov",
-	"psutil>=5.7.0",
+build = [
+	"build",
+]
+classesgen = [
+	# Dependencies for API class generation from System Coupling metadata
+
+	# black and isort are called programmatically to keep generated code
+	# consistent with style elsewhere. We need to keep the versions
+	# in sync with the precommit dependencies.
+	"black==22.3.0",
+	"isort==5.10.1",
 ]
 doc = [
 	"Sphinx==5.2.3",
@@ -69,15 +76,12 @@ style = [
 	"codespell==2.1.0",
 	"flake8==3.9.2",
 ]
-classesgen = [
-	# Dependencies for API class generation from System Coupling metadata
-
-	# black and isort are called programmatically to keep generated code
-	# consistent with style elsewhere. We need to keep the versions
-	# in sync with the precommit dependencies.
-	"black==22.3.0",
-	"isort==5.10.1",
+tests = [
+	"pytest",
+	"pytest-cov",
+	"psutil>=5.7.0",
 ]
+
 [tool.flit.module]
 name = "ansys.systemcoupling.core"
 
