Switch to using pyproject.toml (#53)
* tidy up setup.py before proceeding

* first cut switch to pyproject.toml

* remove more dependencies on requirements files

* fix pip install

* fix pip install (2)

* add 'build' dependencies to toml, even though trivial

* README and small doc tidy

* remove requirements/ dir

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Install style requirements
         run: |
-          pip install -r requirements/requirements_style.txt --disable-pip-version-check
+          pip install .[style] --disable-pip-version-check
 
       - name: Codespell
         run: |
@@ -146,7 +146,7 @@ jobs:
 
       - name: Build HTML
         run: |
-          pip install -r requirements/requirements_docs.txt
+          pip install .[doc]
           make -C doc clean
           make -C doc html SPHINXERRWARN="-W"
         env:
