add initial SyC vocab

--- a/doc/.vale.ini
+++ b/doc/.vale.ini
@@ -5,7 +5,9 @@
 StylesPath = "styles"
 
 # The options are `suggestion`, `warning`, or `error` (defaults to “warning”).
-MinAlertLevel = warning
+# !! Start with error until fixed; aim for warning !!
+#MinAlertLevel = warning
+MinAlertLevel = error
 
 # By default, `code` and `tt` are ignored.
 IgnoredScopes = code, tt
@@ -19,8 +21,8 @@ WordTemplate = \b(?:%s)\b
 # List of Packages to be used for our guidelines
 Packages = Google
 
-# Define the Ansys vocabulary
-Vocab = ANSYS
+# Define the System Coupling vocabulary
+Vocab = SyC
 
 [*.{md,rst}]
 
