--- a/doc/.vale.ini
+++ b/doc/.vale.ini
@@ -31,3 +31,4 @@ BasedOnStyles = Vale, Google
 
 # Removing Google-specific rule - Not applicable under some circumstances
 Google.Colons = NO
+Goolge.Quotes = NO
