--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,7 +4,7 @@ exclude: ^(src/ansys/api/systemcoupling/v0/|examples/|doc/)
 # initially copied from pymapdl
 repos:
 - repo: https://github.com/psf/black
-  rev: 22.12.0
+  rev: 22.12.0  # IF VERSION CHANGES --> MODIFY "blacken-docs" MANUALLY AS WELL!!
   hooks:
   - id: black
 
@@ -35,3 +35,15 @@ repos:
 #   - id: pydocstyle
 #     additional_dependencies: [toml]
 #     exclude: "tests/"
+
+# validate GitHub workflow files
+- repo: https://github.com/python-jsonschema/check-jsonschema
+  rev: 0.19.2
+  hooks:
+    - id: check-github-workflows
+
+- repo: https://github.com/asottile/blacken-docs
+  rev: v1.12.1
+  hooks:
+  -   id: blacken-docs
+      additional_dependencies: [black==22.12.0]
