--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,12 +4,12 @@ exclude: ^(src/ansys/api/systemcoupling/v0/|examples/|doc/)
 # initially copied from pymapdl
 repos:
 - repo: https://github.com/psf/black
-  rev: 22.3.0
+  rev: 22.12.0  # IF VERSION CHANGES --> MODIFY "blacken-docs" MANUALLY AS WELL!!
   hooks:
   - id: black
 
 - repo: https://github.com/pycqa/isort
-  rev: 5.10.1
+  rev: 5.11.4
   hooks:
   - id: isort
     args: [
@@ -19,12 +19,12 @@ repos:
     ]
 
 - repo: https://github.com/PyCQA/flake8
-  rev: 5.0.4
+  rev: 6.0.0
   hooks:
   - id: flake8
 
 - repo: https://github.com/codespell-project/codespell
-  rev: v2.1.0
+  rev: v2.2.2
   hooks:
   - id: codespell
 
@@ -35,3 +35,15 @@ repos:
 #   - id: pydocstyle
 #     additional_dependencies: [toml]
 #     exclude: "tests/"
+
+# validate GitHub workflow files
+- repo: https://github.com/python-jsonschema/check-jsonschema
+  rev: 0.19.2
+  hooks:
+    - id: check-github-workflows
+
+- repo: https://github.com/asottile/blacken-docs
+  rev: v1.12.1
+  hooks:
+  -   id: blacken-docs
+      additional_dependencies: [black==22.12.0]
