try alert on warning

--- a/doc/.vale.ini
+++ b/doc/.vale.ini
@@ -6,8 +6,8 @@ StylesPath = "styles"
 
 # The options are `suggestion`, `warning`, or `error` (defaults to “warning”).
 # !! Start with error until fixed; aim for warning !!
-#MinAlertLevel = warning
-MinAlertLevel = error
+MinAlertLevel = warning
+#MinAlertLevel = error
 
 # By default, `code` and `tt` are ignored.
 IgnoredScopes = code, tt
