--- a/doc/.vale.ini
+++ b/doc/.vale.ini
@@ -32,3 +32,4 @@ BasedOnStyles = Vale, Google
 # Removing Google-specific rule - Not applicable under some circumstances
 Google.Colons = NO
 Google.Quotes = NO
+Google.Headings = NO
