--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,3 @@
-# check spelling, codestyle
 name: GitHub CI
 
 # run only on main branch.  This avoids duplicated actions on PRs
@@ -10,7 +9,21 @@ on:
     branches:
       - main
 
+concurrency:
+  group: ${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
+
+  doc-style:
+    name: "Documentation style check"
+    runs-on: ubuntu-latest
+    steps:
+      - name: "PySystemCoupling documentation style checks"
+        uses: pyansys/actions/doc-style@v2
+        with:
+          token: ${{ secrets.GH_TOKEN }}
+
   style:
     name: Style Check
     runs-on: ubuntu-latest
