Add 'protobuf' to dependabot ignore list

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,6 +9,7 @@ updates:
       - "dependencies"
     ignore:
       - dependency-name: "grpcio"
+      - dependency-name: "protobuf"
 
   - package-ecosystem: "github-actions"
     directory: "/"
