--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,5 @@
-# Exclude grpc generated files etc.
-exclude: ^(src/ansys/api/systemcoupling/v0/|examples/|doc/)
+# Exclusions
+exclude: ^(examples/|doc/)
 
 # initially copied from pymapdl
 repos:
@@ -7,6 +7,12 @@ repos:
   rev: 22.12.0  # IF VERSION CHANGES --> MODIFY "blacken-docs" MANUALLY AS WELL!!
   hooks:
   - id: black
+
+- repo: https://github.com/asottile/blacken-docs
+  rev: v1.12.1
+  hooks:
+  -   id: blacken-docs
+      additional_dependencies: [black==22.12.0]
 
 - repo: https://github.com/pycqa/isort
   rev: 5.11.4
@@ -41,9 +47,3 @@ repos:
   rev: 0.19.2
   hooks:
     - id: check-github-workflows
-
-- repo: https://github.com/asottile/blacken-docs
-  rev: v1.12.1
-  hooks:
-  -   id: blacken-docs
-      additional_dependencies: [black==22.12.0]
