--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,11 @@ on:
     branches:
       - main
 
+env:
+  MAIN_PYTHON_VERSION: "3.8"
+
+
+
 concurrency:
   group: ${{ github.ref }}
   cancel-in-progress: true
@@ -20,32 +25,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: "PySystemCoupling documentation style checks"
-        uses: pyansys/actions/doc-style@v2
+        uses: pyansys/actions/doc-style@v3
         with:
           token: ${{ secrets.GH_TOKEN }}
 
   style:
-    name: Style Check
+    name: Code style
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v3
-      - name: Setup Python
-        uses: actions/setup-python@v4
+      - name: PyAnsys code style checks
+        uses: pyansys/actions/code-style@v3
         with:
-          python-version: 3.8
-
-      - name: Install style requirements
-        run: |
-          pip install .[style] --disable-pip-version-check
-
-      - name: Codespell
-        run: |
-          make codespell
-
-      - name: flake8
-        run: |
-          make flake8
+          python-version: ${{ env.MAIN_PYTHON_VERSION }}
 
   build_test:
     name: Build and Testing
