--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,9 @@ on:
 
 env:
   MAIN_PYTHON_VERSION: "3.8"
-
+  PACKAGE_NAME: "ansys-systemcoupling-core"
+  PACKAGE_NAMESPACE: "ansys.systemcoupling.core"
+  DOCUMENTATION_CNAME: "systemcoupling.docs.pyansys.com"
 
 
 concurrency:
@@ -47,7 +49,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.8
+          python-version: ${{ env.MAIN_PYTHON_VERSION }}
 
       - name: Create initial wheel and install
         run: make build-install
@@ -95,17 +97,19 @@ jobs:
           path: cov_html
           retention-days: 7
 
-      - name: Check wheel
-        run: |
-          pip install twine
-          twine check dist/*
+      # - name: Check wheel
+      #   run: |
+      #     pip install twine
+      #     twine check dist/*
 
-      - name: Upload wheel
-        uses: actions/upload-artifact@v3
-        with:
-          name: ansys-systemcoupling-core-wheel
-          path: dist/
-          retention-days: 7
+      # - name: Upload wheel
+      #   uses: actions/upload-artifact@v3
+      #   with:
+      #     name: ansys-systemcoupling-core-wheel
+      #     path: dist/
+      #     retention-days: 7
+
+
 
   docs:
     name: Build Documentation
@@ -177,6 +181,17 @@ jobs:
       #     name: Documentation-pdf
       #     path: doc/_build/latex/*.pdf
       #     retention-days: 7
+
+  package:
+    name: Package library
+    needs: [build_test, docs]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Build library source and wheel artifacts
+        uses: pyansys/actions/build-library@v3
+        with:
+          library-name: ${{ env.PACKAGE_NAME }}
+          python-version: ${{ env.MAIN_PYTHON_VERSION }}
 
   Release:
     if: contains(github.ref, 'refs/tags')
