--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -204,7 +204,7 @@ jobs:
       - name: Upload HTML Documentation
         uses: actions/upload-artifact@v3
         with:
-          name: documentation-html
+          name: BOB-html
           path: doc/_build/html
           retention-days: 7
 
@@ -237,6 +237,7 @@ jobs:
         with:
           cname: ${{ env.DOCUMENTATION_CNAME }}
           token: ${{ secrets.GH_TOKEN }}
+          doc-artifact-name: "BOB-html"
 
   Release:
     if: contains(github.ref, 'refs/tags')
