--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -204,7 +204,7 @@ jobs:
       - name: Upload HTML Documentation
         uses: actions/upload-artifact@v3
         with:
-          name: BOB-html
+          name: documentation-html
           path: doc/_build/html
           retention-days: 7
 
@@ -228,7 +228,7 @@ jobs:
 
   upload_dev_docs:
     name: Upload dev documentation
-    #if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     needs: [package]
     steps:
@@ -237,7 +237,7 @@ jobs:
         with:
           cname: ${{ env.DOCUMENTATION_CNAME }}
           token: ${{ secrets.GH_TOKEN }}
-          doc-artifact-name: "BOB-html"
+          doc-artifact-name: "documentation-html"
 
   Release:
     if: contains(github.ref, 'refs/tags')
