--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,8 +30,18 @@ jobs:
         with:
           token: ${{ secrets.GH_TOKEN }}
 
+  style:
+    name: Code style
+    runs-on: ubuntu-latest
+    steps:
+      - name: PyAnsys code style checks
+        uses: pyansys/actions/code-style@v3
+        with:
+          python-version: ${{ env.MAIN_PYTHON_VERSION }}
+
   smoke-tests:
     name: Smoke Tests
+    needs: [style]
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -74,15 +84,6 @@ jobs:
 
       - name: Test import
         run: make test-import
-
-  style:
-    name: Code style
-    runs-on: ubuntu-latest
-    steps:
-      - name: PyAnsys code style checks
-        uses: pyansys/actions/code-style@v3
-        with:
-          python-version: ${{ env.MAIN_PYTHON_VERSION }}
 
   build_test:
     name: Build and Testing
@@ -203,7 +204,7 @@ jobs:
       - name: Upload HTML Documentation
         uses: actions/upload-artifact@v3
         with:
-          name: Documentation-html
+          name: documentation-html
           path: doc/_build/html
           retention-days: 7
 
@@ -225,9 +226,22 @@ jobs:
           library-name: ${{ env.PACKAGE_NAME }}
           python-version: ${{ env.MAIN_PYTHON_VERSION }}
 
+  upload_dev_docs:
+    name: Upload dev documentation
+    if: github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    needs: [package]
+    steps:
+      - name: Deploy the latest documentation
+        uses: pyansys/actions/doc-deploy-dev@v3
+        with:
+          cname: ${{ env.DOCUMENTATION_CNAME }}
+          token: ${{ secrets.GH_TOKEN }}
+          doc-artifact-name: "documentation-html"
+
   Release:
     if: contains(github.ref, 'refs/tags')
-    needs: [build_test, style, docs]
+    needs: [package]
     runs-on: ubuntu-latest
     steps:
       - name: Set up Python
