--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -236,7 +236,7 @@ jobs:
     name: Upload dev documentation
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
-    needs: [package]
+    needs: [build_test]
     steps:
       - name: Deploy the latest documentation
         uses: pyansys/actions/doc-deploy-dev@v3
