--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -151,7 +151,7 @@ jobs:
 
   docs:
     name: Build Documentation
-    needs: [doc-style, build_test]
+    needs: [doc-style]
     runs-on: ubuntu-latest
 
     steps:
