--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -135,7 +135,7 @@ jobs:
       - name: Upload package
         uses: actions/upload-artifact@v3
         with:
-          name: PyFluent-packages
+          name: ${{ env.PACKAGE_NAME }}-artifacts
           path: |
             dist/*.whl
             dist/*.tar.gz
