docs need only depend on build

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -203,7 +203,7 @@ jobs:
 
   docs:
     name: Build Documentation
-    needs: [doc-style, build-test] # build-test for now
+    needs: [doc-style, build]
     runs-on: ubuntu-latest
 
     steps:
